panel fixed scrollbar fixed table title fixed (left alignment for dashboard 1)

--- a/src/app/DIS/components/layout/layout.component.scss
+++ b/src/app/DIS/components/layout/layout.component.scss
@@ -24,7 +24,6 @@ $dynamic-content-margin: max(20vw, 20rem);
   padding: 0 3rem 0 1rem;
   align-items: center;
   height:6vh;
-  overflow-y: hidden;
   
 
   &__title, .sidebar-toggle {
