--- a/src/app/DIS/styles/styles.scss
+++ b/src/app/DIS/styles/styles.scss
@@ -506,9 +506,3 @@ tr:hover .k-icon.k-i-more-vertical:before {
 .k-notification-group {
   z-index: 100002;
 }
-
-.k-grid thead {
-  text-align: center !important;
-  border-color: inherit;
-  
-  }
